@@ -588,6 +588,18 @@ SDR Issue #7: [COMPLIANCE]
 
   Resolution: None
 
+SDR Issue #8: [COMPLIANCE]
+
+  Atleast 1 event only record lists an event reading type code of
+  "threshold" and the sensor type of "other units based sensor", yet
+  event only records do not contain sensor unit information.  So any
+  event that is based on this SDR entry cannot be properly
+  interpreted.
+
+  Seen on: QuantaPlex T42D-2U
+
+  Resolution: Workaround to ignore such event records
+
 ----------------------------------------------------------------------
 
 --------------------------
